--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" type="image/ico" href="img/favicon.ico">
-    <script defer  language="JavaScript" type="text/javascript" src="./main.js"></script>
+    <script defer  language="JavaScript" type="text/javascript" src="./index.js"></script>
 
     <title>Crafts Promos</title>
 
