--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" type="image/ico" href="img/favicon.ico">
-    <script defer  language="JavaScript" type="text/javascript" src="./index.js"></script>
+    <script defer language="JavaScript" type="text/javascript" src="./index.js"></script>
 
     <title>Crafts Promos</title>
 
@@ -503,7 +503,15 @@
 
     </div>
     <!-- End of Page Wrapper -->
+    <!-- Bootstrap core JavaScript-->
+    <script type="module" src="vendor/jquery/jquery.min.js"></script>
+    <script type="module" src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Core plugin JavaScript-->
+    <script  type="module" src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Custom scripts for all pages-->
+    <script type="module" src="js/sb-admin-2.min.js"></script>
 
 </body>
 
