--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                Interface
+                Documentation
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
@@ -84,7 +84,7 @@
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="">
+                <a class="nav-link" href="./tables.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Categories</span></a>
             </li>
@@ -165,7 +165,7 @@
 
                             <!-- QUESTION 1: BRAND -->
                             <div class="card shadow mb-4">
-                                <div class="card-header py-3">
+                                <div class="card-header">
                                     <h6 class="m-0 font-weight-bold text-primary">Brand</h6>
                                 </div>
                                 <div class="card-body">
@@ -188,7 +188,7 @@
 
                             <!-- Promo Code -->
                             <div class="card shadow mb-4">
-                                <div class="card-header py-3">
+                                <div class="card-header">
                                     <h6 class="m-0 font-weight-bold text-primary">Promotion Code</h6>
                                 </div>
                                 <div class="card-body">
@@ -205,7 +205,7 @@
 
                             <!-- PROMO TYPE -->
                             <div class="card shadow mb-4">
-                                <div class="card-header py-3">
+                                <div class="card-header ">
                                     <h6 class="m-0 font-weight-bold text-primary">Promotion Type</h6>
                                 </div>
                                 <div class="card-body">
@@ -233,7 +233,7 @@
 
                             <!-- Threshold Type -->
                             <div class="card shadow mb-4">
-                                <div class="card-header py-3">
+                                <div class="card-header ">
                                     <h6 class="m-0 font-weight-bold text-primary">Use Case</h6>
                                 </div>
                                 <div class="card-body">
@@ -259,7 +259,7 @@
 
                             <!-- Start Date -->
                             <div class="card shadow mb-4">
-                                <div class="card-header py-3">
+                                <div class="card-header ">
                                     <h6 class="m-0 font-weight-bold text-primary">Start Date</h6>
                                 </div>
                                 <div class="card-body">
@@ -281,7 +281,7 @@
 
                             <!-- End Date -->
                             <div class="card shadow mb-4">
-                                <div class="card-header py-3">
+                                <div class="card-header ">
                                     <h6 class="m-0 font-weight-bold text-primary">End Date</h6>
                                 </div>
                                 <div class="card-body">
@@ -303,7 +303,7 @@
 
                             <!-- Testing Date -->
                             <div class="card shadow mb-4">
-                                <div class="card-header py-3">
+                                <div class="card-header ">
                                     <h6 class="m-0 font-weight-bold text-primary">Testing Date</h6>
                                 </div>
                                 <div class="card-body">
@@ -332,7 +332,7 @@
 
                             <!-- Discount Type -->
                             <div class="card shadow mb-4">
-                                <div class="card-header py-3">
+                                <div class="card-header ">
                                     <h6 class="m-0 font-weight-bold text-primary">Discount Type</h6>
                                 </div>
                                 <div class="card-body">
@@ -353,7 +353,7 @@
 
                             <!-- Discount Amount -->
                             <div class="card shadow mb-4">
-                                <div class="card-header py-3">
+                                <div class="card-header ">
                                     <h6 class="m-0 font-weight-bold text-primary">Discount Amount</h6>
                                 </div>
                                 <div class="card-body">
@@ -370,7 +370,7 @@
 
                             <!-- Threshold Type -->
                             <div class="card shadow mb-4">
-                                <div class="card-header py-3">
+                                <div class="card-header ">
                                     <h6 class="m-0 font-weight-bold text-primary">Threshold Type</h6>
                                 </div>
                                 <div class="card-body">
@@ -390,7 +390,7 @@
 
                             <!-- Threshold Amount -->
                             <div class="card shadow mb-4">
-                                <div class="card-header py-3">
+                                <div class="card-header ">
                                     <h6 class="m-0 font-weight-bold text-primary">Threshold Amount</h6>
                                 </div>
                                 <div class="card-body">
@@ -411,7 +411,7 @@
 
                             <!-- Category -->
                             <div class="card shadow mb-4">
-                                <div class="card-header py-3">
+                                <div class="card-header ">
                                     <h6 class="m-0 font-weight-bold text-primary">Item or Category</h6>
                                 </div>
                                 <div class="card-body">
@@ -434,7 +434,7 @@
 
                             <!-- Category -->
                             <div class="card shadow mb-4">
-                                <div class="card-header py-3">
+                                <div class="card-header ">
                                     <h6 class="m-0 font-weight-bold text-primary">Description</h6>
                                 </div>
                                 <div class="card-body">
@@ -463,7 +463,7 @@
 
                             <!-- Category -->
                             <div class="card shadow mb-4">
-                                <div class="card-header py-3">
+                                <div class="card-header ">
                                     <h6 class="m-0 font-weight-bold text-primary">Output</h6>
                                 </div>
                                 <div class="card-body">
