--- a/tables.html
+++ b/tables.html
@@ -167,11 +167,20 @@
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
+                            <h6 class="m-0 font-weight-bold text-primary">KnitPicks Categories</h6>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
-                                <table class="table table-bordered" id="example" width="100%" cellspacing="0"></table>
+                                <table class="table table-bordered" id="example" width="100%" cellspacing="0">
+                                    <thead>
+                                        <tr>
+                                            <th>Category</th>
+                                            <th>Category Name</th>
+                                            <th>Category Type</th>
+                                        </tr>
+                                    </thead>
+
+                                </table>
                             </div>
                         </div>
                     </div>
@@ -207,9 +216,9 @@
     <link
     href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css"
     rel="stylesheet" type="text/css" />
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.js"></script>
-
 
 </body>
 
