--- a/utm.html
+++ b/utm.html
@@ -292,7 +292,7 @@
                                 <div class="d-sm-flex justify-content-center mb-4">
                                     <button class = "d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" onclick="myFunction()" type = "button"> 
                                         <i class="fas fa-copy fa-sm text-white-80"></i>
-                                        Copy Contents
+                                        Copy
                                     </button>
                                 </div>
 
@@ -331,6 +331,7 @@
 
     <!-- Custom scripts for all pages-->
     <script type="module" src="js/sb-admin-2.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 
 </body>
 
