--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-                <div class="sidebar-brand-icon rotate-n-15">
+                <div class="sidebar-brand-icon">
                     <img class="fas" width = "100" src="img/pna_white.png" alt="...">
                 </div>
                 
@@ -69,22 +69,23 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePromotion"
                     aria-expanded="true" aria-controls="collapsePromotion">
                     <i class="fas fa-fw fa-folder"></i>
-                    <span>Promotion Types</span>
+                    <span>Promotions</span>
                 </a>
                 <div id="collapsePromotion" class="collapse" aria-labelledby="headingPromotion" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Processors:</h6>
-                        <a class="collapse-item text-wrap" href="">Discount, Sitewide</a>
-                        <a class="collapse-item text-wrap" href="">Discount, Item </a>
-                        <a class="collapse-item text-wrap" href="">Discount, Category</a>
-                        <a class="collapse-item text-wrap" href="">Buy X, Get Y Discount, Sitewide </a>
-                        <a class="collapse-item text-wrap" href="">Buy X Item, Get Y Discount On Item</a>
-                        <a class="collapse-item text-wrap" href="">Buy X Category, Get Y Discount On Category</a>
-                        <a class="collapse-item text-wrap" href="">Buy X Category A, Get Y Discount On Category B</a>
-                        <a class="collapse-item text-wrap" href="">Free Item</a>
-                        <a class="collapse-item text-wrap" href="">Free Shipping</a>
-                        <a class="collapse-item text-wrap" href="">Tiered Discount</a>
-
+                        <h6 class="collapse-header">Submission Rules:</h6>
+                        <a class="collapse-item text-wrap" href="promo-help.html">How To Submit</a>
+                        <h6 class="collapse-header">Promotions:</h6>
+                        <a class="collapse-item text-wrap" href="promo-help.html">Discount, Sitewide</a>
+                        <a class="collapse-item text-wrap" href="promo-help.html">Discount, Item </a>
+                        <a class="collapse-item text-wrap" href="promo-help.html">Discount, Category</a>
+                        <a class="collapse-item text-wrap" href="promo-help.html">Buy X, Get Y Discount, Sitewide </a>
+                        <a class="collapse-item text-wrap" href="promo-help.html">Buy X Item, Get Y Discount On Item</a>
+                        <a class="collapse-item text-wrap" href="promo-help.html">Buy X Category, Get Y Discount On Category</a>
+                        <a class="collapse-item text-wrap" href="promo-help.html">Buy X Category A, Get Y Discount On Category B</a>
+                        <a class="collapse-item text-wrap" href="promo-help.html">Free Item</a>
+                        <a class="collapse-item text-wrap" href="promo-help.html">Free Shipping</a>
+                        <a class="collapse-item text-wrap" href="promo-help.html">Tiered Discount</a>
                     </div>
                 </div>
             </li>
@@ -93,41 +94,19 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUTM"
                     aria-expanded="true" aria-controls="collapseUTM">
                     <i class="fas fa-fw fa-folder"></i>
-                    <span>UTM Parameters</span>
+                    <span>UTM Codes</span>
                 </a>
                 <div id="collapseUTM" class="collapse" aria-labelledby="headingUTM" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">What is a...</h6>
-                        <a class="collapse-item text-wrap" href="">UTM Code</a>
-                        <a class="collapse-item text-wrap" href="">Source </a>
-                        <a class="collapse-item text-wrap" href="">Medium</a>
-                        <a class="collapse-item text-wrap" href="">Campaign </a>
-                        <a class="collapse-item text-wrap" href="">Content</a>
+                        <h6 class="collapse-header">What is a:</h6>
+                        <a class="collapse-item text-wrap" href="utm-help.html">UTM Code</a>
+                        <a class="collapse-item text-wrap" href="utm-help.html#headingTwo">Source </a>
+                        <a class="collapse-item text-wrap" href="utm-help.html#headingThree">Medium</a>
+                        <a class="collapse-item text-wrap" href="utm-help.html#headingFour">Campaign </a>
+                        <a class="collapse-item text-wrap" href="utm-help.html#headingFive">Content</a>
 
                     </div>
                 </div>
-            </li>
-
-            <!-- Divider -->
-            <hr class="sidebar-divider">
-
-            <!-- Heading -->
-            <div class="sidebar-heading">
-                Product Management
-            </div>
-
-            <!-- Nav Item - Charts -->
-            <li class="nav-item">
-                <a class="nav-link" href="./tables.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Categories</span></a>
-            </li>
-
-            <!-- Nav Item - Tables -->
-            <li class="nav-item">
-                <a class="nav-link" href="">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Inventory</span></a>
             </li>
 
             <!-- Divider -->
@@ -136,7 +115,7 @@
             <!-- Sidebar Message -->
             <div class="sidebar-card d-none d-lg-flex">
                 <p class="text-center mb-2">Are you looking for a promo that doesn't exist yet?</p>
-                <a class="btn btn-success btn-sm" href="https://startbootstrap.com/theme/sb-admin-pro">Email Me!</a>
+                <a class="btn btn-success btn-sm" href="mailto:michael_lindsay@crafsamericana.com">Email Me!</a>
             </div>
 
         </ul>
@@ -175,8 +154,8 @@
                                         </div>
                                     </div>
                                     <div>
-                                        <div class="small text-gray-500">May 19, 2023</div>
-                                        <span class="font-weight-bold">Yarn families were updated!</span>
+                                        <div class="small text-gray-500">June 16, 2023</div>
+                                        <span class="font-weight-bold">Check for updates here!</span>
                                     </div>
                                 </a>
                                 <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
@@ -279,7 +258,7 @@
                                     <div class = "row mb-4">
 
                                         <!-- QUESTION 1: START DATE -->
-                                        <div class="col-xl-4 col-md-6">
+                                        <div class="col-xl-3 col-md-6">
                                             <div class="mb-2">
                                                 <h6 class="m-0"><b>Start Date*</b></h6>
                                             </div>
@@ -294,7 +273,7 @@
                                         </div>
 
                                         <!-- QUESTION 2: END DATE -->
-                                        <div class="col-xl-4 col-md-6">
+                                        <div class="col-xl-3 col-md-6">
                                             <div class="mb-2">
                                                 <h6 class="m-0"><b>End Date*</b></h6>
                                             </div>
@@ -309,7 +288,7 @@
                                         </div>
 
                                         <!-- QUESTION 3: TEST DATE -->
-                                        <div class="col-xl-4 col-md-6">
+                                        <div class="col-xl-3 col-md-6">
                                             <div class="mb-2">
                                                 <h6 class="m-0"><b>Test Date*</b></h6>
                                             </div>
@@ -326,61 +305,7 @@
                                     </div>
                                     <!-- ROW 2 END-->
 
-                                    <!-- ROW 3 START -->
-                                    <div class = "row mb-4">
-
-                                        <!-- QUESTION 1: DISCOUNT TYPE -->
-                                        <div class="col-xl-2 col-md-6">
-                                            <div class="mb-2">
-                                                <h6 class="m-0"><b>Discount Type*</b></h6>
-                                            </div>
-                                            <div class="dropdown">
-                                                <select class="form-control" id="discount-type-input">
-                                                    <option value="" disabled selected hidden></option>
-                                                    <option value="$">Dollar</option>
-                                                    <option value="%">Percent</option>
-                                                  </select>
-                                            </div>
-                                        </div>
-
-                                        <!-- QUESTION 2: DISCOUNT AMOUNT -->
-                                        <div class="col-xl-4 col-md-6">
-                                            <div class="mb-2">
-                                                <h6 class="m-0"><b>Discount Amount*</b></h6>
-                                            </div>
-                                            <div class="input">
-                                                <input class="form-control" id="discount-input" type="text" value="" required>
-                                            </div>
-                                        </div>
-
-                                        <!-- QUESTION 3: THRESHOLD TYPE -->
-                                        <div class="col-xl-2 col-md-6">
-                                            <div class="mb-2">
-                                                <h6 class="m-0"><b>Threshold Type</b></h6>
-                                            </div>
-                                            <div class="dropdown">
-                                                <select class="form-control" id="threshold-type-input">
-                                                    <option value="" disabled selected hidden></option>
-                                                    <option value="$">Dollar</option>
-                                                    <option value="Units">Quantity</option>
-                                                  </select>
-                                            </div>
-                                        </div>
-
-                                        <!-- QUESTION 4: THRESHOLD AMOUNT -->
-                                        <div class="col-xl-4 col-md-6">
-                                            <div class="mb-2">
-                                                <h6 class="m-0"><b>Threshold Amount</b></h6>
-                                            </div>
-                                            <div class="input">
-                                                <input class="form-control" id="threshold-input" type="text" value="" required>
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                    <!-- ROW 4 END-->
-
-                                    <!-- ROW 5 START-->
+                                    <!-- ROW 3 START-->
                                     <div class = "row mb-4">
 
                                         <!-- QUESTION 1: ITEMS / CATEGORY-->
@@ -394,9 +319,9 @@
                                         </div>
 
                                     </div>
-                                    <!-- ROW 5 END-->
+                                    <!-- ROW 3 END-->
 
-                                    <!-- ROW 6 START-->
+                                    <!-- ROW 4 START-->
                                     <div class = "row mb-4">
 
                                         <!-- QUESTION 1: ITEMS / CATEGORY-->
@@ -410,16 +335,16 @@
                                         </div>
 
                                     </div>
-                                    <!-- ROW 6 END-->
+                                    <!-- ROW 4 END-->
 
-                                    <!-- ROW 7 START -->
+                                    <!-- ROW 5 START -->
                                     <div class="d-sm-flex align-items-center justify-content-center">
                                         <button class = "d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" onclick="myFunction()" type = "button"> 
                                         <i class="fas fa-download fa-sm text-white-80"></i>
-                                        Print Instructions 
+                                        Generate Instructions 
                                         </button>
                                     </div>
-                                    <!-- ROW 7 END-->
+                                    <!-- ROW 5 END-->
 
                                 </div>
 
@@ -451,7 +376,7 @@
                                         <div class="col-xl-12 col-md-6">
                                             <div class="form-group">
                                                 <textarea class="form-control" id="output" rows="7"></textarea>
-                                              </div>
+                                            </div>
                                         </div>
 
                                     </div>
