--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/ico" href="img/favicon.ico">
     <script defer language="JavaScript" type="text/javascript" src="./index.js"></script>
 
-    <title>Crafts Promos</title>
+    <title>Crafts Marketing</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
