--- a/promo-help.html
+++ b/promo-help.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/ico" href="img/favicon.ico">
     <script defer language="JavaScript" type="text/javascript" src="./utm.js"></script>
 
-    <title>Crafts Promos</title>
+    <title>Crafts Marketing</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -193,7 +193,7 @@
                                             <div class="card-body">
                                                 Fill out the promotion builder, and <b>only submit one basecamp task</b> per brand. 
                                                 <br> <br>
-                                                No need to make a separate task for Response and Cagdev.
+                                                No need to make a separate task for Response and CagDev entry.
 
                                                 <br> <br>
                                                 <b>General Courtesies:</b>
@@ -202,7 +202,7 @@
                                                 <br> <br>
                                                 • Pick a testing date a week out before the start date (assuming above). We will open/closeout testing on that date.
                                                 <br> <br>
-                                                • For promotions involving a discount on a certain item/yarn line/category, please include the applicable item codes from Category Management.
+                                                • For promotions involving a discount on a certain item/yarn line/category, please include the applicable item codes from Category Management in CagDev.
                                                 <br> <br>
                                                 • Have a promotion that doesn't seem to fit in any of the predefined categories? Let Rosie know as soon as possible!
                                             </div>
