--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                                         <!-- QUESTION 1: BRAND -->
                                         <div class="col-xl-2 col-md-6">
                                             <div class="mb-2">
-                                                <h6 class="m-0"><b>Brand*</b></h6>
+                                                <h6 class="m-0"><b>Brand</b></h6>
                                             </div>
                                             <div class="dropdown">
                                                 <select class="form-control" id="brand-input">
@@ -209,7 +209,7 @@
                                         <!-- QUESTION 2: PROMO -->
                                         <div class="col-xl-3 col-md-6">
                                             <div class="mb-2">
-                                                <h6 class="m-0"><b>Promotion Code*</b></h6>
+                                                <h6 class="m-0"><b>Promotion Code</b></h6>
                                             </div>
                                             <div class="input">
                                                 <input class="form-control" id="promo-input" type="text" value="" required>
@@ -219,7 +219,7 @@
                                         <!-- QUESTION 3: PROMO TYPE -->
                                         <div class="col-xl-3 col-md-6">
                                             <div class="mb-2">
-                                                <h6 class="m-0"><b>Promotion Type*</b></h6>
+                                                <h6 class="m-0"><b>Promotion Type</b></h6>
                                             </div>
                                             <div class="dropdown">
                                                 <select class="form-control" id="promo-type-input">
@@ -240,7 +240,7 @@
                                         <!-- QUESTION 4: USE CASE -->
                                         <div class="col-xl-3 col-md-6">
                                             <div class="mb-2">
-                                                <h6 class="m-0"><b>Use Case*</b></h6>
+                                                <h6 class="m-0"><b>Use Case</b></h6>
                                             </div>
                                             <div class="dropdown">
                                                 <select class="form-control" id="use-case-input">
@@ -260,7 +260,7 @@
                                         <!-- QUESTION 1: START DATE -->
                                         <div class="col-xl-3 col-md-6">
                                             <div class="mb-2">
-                                                <h6 class="m-0"><b>Start Date*</b></h6>
+                                                <h6 class="m-0"><b>Start Date</b></h6>
                                             </div>
                                             <div class="form-group">
                                                 <div class="datepicker date input-group">
@@ -275,7 +275,7 @@
                                         <!-- QUESTION 2: END DATE -->
                                         <div class="col-xl-3 col-md-6">
                                             <div class="mb-2">
-                                                <h6 class="m-0"><b>End Date*</b></h6>
+                                                <h6 class="m-0"><b>End Date</b></h6>
                                             </div>
                                             <div class="form-group">
                                                 <div class="datepicker date input-group">
@@ -290,7 +290,7 @@
                                         <!-- QUESTION 3: TEST DATE -->
                                         <div class="col-xl-3 col-md-6">
                                             <div class="mb-2">
-                                                <h6 class="m-0"><b>Test Date*</b></h6>
+                                                <h6 class="m-0"><b>Test Date</b></h6>
                                             </div>
                                             <div class="form-group">
                                                 <div class="datepicker date input-group">
