placeholder text bc 12am

--- a/promo-help.html
+++ b/promo-help.html
@@ -213,17 +213,13 @@
                                           <div class="card-header" id="headingTwo">
                                             <h5 class="mb-0">
                                               <button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                                What is a Source?
+                                                Placeholder 1
                                               </button>
                                             </h5>
                                           </div>
                                           <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordion">
                                             <div class="card-body">
-                                                This parameter (utm_source) defines where the traffic is coming from.
-                                                <br> <br>
-                                                This can be a social network, a podcast, etc.
-                                                <br> <br>
-                                                The ones we would generally use are listed in a drop down, but if there are others that should be added, let Michael know.
+                                                Lorem ipsum. Beep boop bop, I've run out of thoughts.
                                             </div>
                                           </div>
                                         </div>
@@ -232,17 +228,13 @@
                                           <div class="card-header" id="headingThree">
                                             <h5 class="mb-0">
                                               <button class="btn btn-link" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                                What is a Medium?
+                                                Placeholder 2
                                               </button>
                                             </h5>
                                           </div>
                                           <div id="collapseThree" class="collapse show" aria-labelledby="headingThree" data-parent="#accordion">
                                             <div class="card-body">
-                                                This parameter (utm_medium) is used to identify how the link is being shared.
-                                                <br> <br>
-                                                It will only ever be an Ad, Email, Social, or Referral. 
-                                                <br> <br>
-                                                The first three are straight forward, but referral is meant to be the catch all for things that don't fit in a tidy box. An example of this would be an in-person QR code.
+                                                Lorem ipsum. Beep boop bop, I've run out of thoughts.
                                             </div>
                                           </div>
                                         </div>
@@ -251,20 +243,13 @@
                                             <div class="card-header" id="headingFour">
                                               <h5 class="mb-0">
                                                 <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                                  What is a Campaign?
+                                                  Placeholder 3
                                                 </button>
                                               </h5>
                                             </div>
                                             <div id="collapseFour" class="collapse show" aria-labelledby="headingFour" data-parent="#accordion">
                                               <div class="card-body">
-                                                This parameter (utm_campaign) is used to identify the campaign we are running (or in Social's case, the platform we are posting from).
-                                                <br> <br>
-                                                In Crafts Group we often refer to this as the Media ID, because this is the part of the UTM code that gets credit for the sale internally.
-                                                <br> <br>
-                                                Using a consistent campaign name is paramount, which is why this tool exists.
-                                                <br> <br>
-                                                <b>NOTE:</b> If you are making a custom campaign, it’s <i>very important</i> that this be entered into Response before a link is sent out!
-                                                If you are unsure how to check, please reach out to Michael! Otherwise our internal order tables won’t know where an order came from, and Michael will probably be sad.
+                                                Lorem ipsum. Beep boop bop, I've run out of thoughts.
                                               </div>
                                             </div>
                                         </div>
@@ -273,25 +258,13 @@
                                             <div class="card-header" id="headingFive">
                                               <h5 class="mb-0">
                                                 <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                                                  What is Content?
+                                                 Placeholder 5
                                                 </button>
                                               </h5>
                                             </div>
                                             <div id="collapseFive" class="collapse show" aria-labelledby="headingFive" data-parent="#accordion">
                                               <div class="card-body">
-                                                This parameter (utm_content) is used to determine what someone clicked to get to our site when there are multiple links pointing to the same url/campaign.
-                                                <br> <br>
-                                                In practice this would be:
-                                                <br> <br>
-                                                Emails: The specific link inside of an email. (shop-now, specific_sale_link, etc.)
-                                                <br> <br>
-                                                Podcasts: The episode number. (ep-1, ep_2, etc.)
-                                                <br> <br>
-                                                Youtube: The video title, or a summary. (hand-painting, tubular_cast, etc.)
-                                                <br> <br>
-                                                Socials: The specific sale or campaign that we are promoting. (summer-yarn-sale, etc.)
-                                                <br> <br>
-                                                <i>P.s. It doesn't matter if you prefer using dashes or underscores. Just don't use spaces.</i>
+                                                Lorem ipsum. Beep boop bop, I've run out of thoughts.
                                               </div>
                                             </div>
                                         </div>
