--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="utm.html">
                     <i class="fas fa-fw fa-code"></i>
-                    <span>UTM Builder</span></a>
+                    <span>Promotion Builder</span></a>
             </li>
 
             <!-- Divider -->
