--- a/promo-help.html
+++ b/promo-help.html
@@ -213,13 +213,13 @@
                                           <div class="card-header" id="headingTwo">
                                             <h5 class="mb-0">
                                               <button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                                Placeholder 1
+                                                Discount, Sitewide
                                               </button>
                                             </h5>
                                           </div>
                                           <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordion">
                                             <div class="card-body">
-                                                Lorem ipsum. Beep boop bop, I've run out of thoughts.
+                                                Lorem ipsum.
                                             </div>
                                           </div>
                                         </div>
@@ -228,13 +228,13 @@
                                           <div class="card-header" id="headingThree">
                                             <h5 class="mb-0">
                                               <button class="btn btn-link" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                                Placeholder 2
+                                                Discount, Item
                                               </button>
                                             </h5>
                                           </div>
                                           <div id="collapseThree" class="collapse show" aria-labelledby="headingThree" data-parent="#accordion">
                                             <div class="card-body">
-                                                Lorem ipsum. Beep boop bop, I've run out of thoughts.
+                                                Lorem ipsum. 
                                             </div>
                                           </div>
                                         </div>
@@ -243,13 +243,13 @@
                                             <div class="card-header" id="headingFour">
                                               <h5 class="mb-0">
                                                 <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                                  Placeholder 3
+                                                  Discount, Category
                                                 </button>
                                               </h5>
                                             </div>
                                             <div id="collapseFour" class="collapse show" aria-labelledby="headingFour" data-parent="#accordion">
                                               <div class="card-body">
-                                                Lorem ipsum. Beep boop bop, I've run out of thoughts.
+                                                Lorem ipsum. 
                                               </div>
                                             </div>
                                         </div>
@@ -258,13 +258,13 @@
                                             <div class="card-header" id="headingFive">
                                               <h5 class="mb-0">
                                                 <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                                                 Placeholder 5
+                                                 Buy X, Get Y Discount Sitewide
                                                 </button>
                                               </h5>
                                             </div>
                                             <div id="collapseFive" class="collapse show" aria-labelledby="headingFive" data-parent="#accordion">
                                               <div class="card-body">
-                                                Lorem ipsum. Beep boop bop, I've run out of thoughts.
+                                                Lorem ipsum.
                                               </div>
                                             </div>
                                         </div>
