--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                             <div class="card shadow mb-4">
 
                                 <div class="card-header">
-                                    <h6 class="m-0 font-weight-bold text-primary">UTM Builder</h6>
+                                    <h6 class="m-0 font-weight-bold text-primary">Promotion Builder</h6>
                                 </div>
 
                                 <div class="card-body">
