--- a/utm.html
+++ b/utm.html
@@ -75,16 +75,17 @@
                         <h6 class="collapse-header">Submission Rules:</h6>
                         <a class="collapse-item text-wrap" href="promo-help.html">How To Submit</a>
                         <h6 class="collapse-header">Promotions:</h6>
-                        <a class="collapse-item text-wrap" href="promo-help.html">Discount, Sitewide</a>
-                        <a class="collapse-item text-wrap" href="promo-help.html">Discount, Item </a>
-                        <a class="collapse-item text-wrap" href="promo-help.html">Discount, Category</a>
-                        <a class="collapse-item text-wrap" href="promo-help.html">Buy X, Get Y Discount, Sitewide </a>
-                        <a class="collapse-item text-wrap" href="promo-help.html">Buy X Item, Get Y Discount On Item</a>
-                        <a class="collapse-item text-wrap" href="promo-help.html">Buy X Category, Get Y Discount On Category</a>
-                        <a class="collapse-item text-wrap" href="promo-help.html">Buy X Category A, Get Y Discount On Category B</a>
-                        <a class="collapse-item text-wrap" href="promo-help.html">Free Item</a>
-                        <a class="collapse-item text-wrap" href="promo-help.html">Free Shipping</a>
-                        <a class="collapse-item text-wrap" href="promo-help.html">Tiered Discount</a>
+                        <a class="collapse-item text-wrap" href="promo-help.html#headingTwo">Discount, Sitewide</a>
+                        <a class="collapse-item text-wrap" href="promo-help.html#headingThree">Discount, Item </a>
+                        <a class="collapse-item text-wrap" href="promo-help.html#headingFour">Discount, Category</a>
+                        <a class="collapse-item text-wrap" href="promo-help.html#headingSeven">Buy X, Get Y Discount, Sitewide </a>
+                        <a class="collapse-item text-wrap" href="promo-help.html#headingEight">Buy X Item, Get Y Discount On Item</a>
+                        <a class="collapse-item text-wrap" href="promo-help.html#headingNine">Buy X Category, Get Y Discount On Category</a>
+                        <a class="collapse-item text-wrap" href="promo-help.html#headingTen">Buy X Category A, Get Y Discount On Category B</a>
+                        <a class="collapse-item text-wrap" href="promo-help.html#headingFive">Free Item</a>
+                        <a class="collapse-item text-wrap" href="promo-help.html#headingSix">Free Shipping</a>
+                        <a class="collapse-item text-wrap" href="promo-help.html#headingEleven">Most Expensive Item</a>
+                        <a class="collapse-item text-wrap" href="promo-help.html#headingTwelve">Tiered Discount</a>
                     </div>
                 </div>
             </li>
