--- a/index.html
+++ b/index.html
@@ -313,10 +313,10 @@
                                         <!-- QUESTION 1: ITEMS / CATEGORY-->
                                         <div class="col-xl-12 col-md-6">
                                             <div class="mb-2">
-                                                <h6 class="m-0"><b>Items / Category</b></h6>
+                                                <h6 class="m-0"><b>Items / Categories</b></h6>
                                             </div>
                                             <div class="input">
-                                                <input class="form-control" id="item-input" type="text" value="" required>
+                                                <input class="form-control" id="item-input" type="text" value="" placeholder="300358: Aluminum Needles, 300319: Wood Needles, etc. or N/A " required>
                                             </div>
                                         </div>
 
