--- a/promo-help.html
+++ b/promo-help.html
@@ -271,7 +271,7 @@
 
                                           <div id="collapseFour" class="collapse show" aria-labelledby="headingFour" data-parent="#accordion">
                                             <div class="card-body">
-                                              Apply a discount to any cart items that are in the specified included categories.
+                                              Apply a discount to any cart items that are in the included categories.
                                               <br><br>
                                               • You can set a threshold minimum.
                                               <br>
