--- a/promo-help.html
+++ b/promo-help.html
@@ -388,13 +388,13 @@
 
                                           <div id="collapseEight" class="collapse show" aria-labelledby="headingEight" data-parent="#accordion">
                                             <div class="card-body">
-                                              A user has to buy X of the item in order to be elligible for the discount. You can list multiple items, but can't mix and match between them.
+                                              A user has to buy X of the item in order to be eligible for the discount. You can list multiple items, but can't mix and match between them.
                                               <br><br>
                                               E.g. Stash And Save is doing a 40% off on deadstock for a specific fabric and thread.
                                               <br>
-                                              The cart contains both elligible items, 2 portions of fabric and 1 spool of thread.
+                                              The cart contains both eligible items, 2 portions of fabric and 1 spool of thread.
                                               <br> 
-                                              Only the the fabric is elligible for the discount.
+                                              Only the the fabric is eligible for the discount.
                                               <br><br>
                                               • You can set a threshold quantity minimum.
                                               <br>
@@ -418,7 +418,7 @@
 
                                           <div id="collapseNine" class="collapse show" aria-labelledby="headingNine" data-parent="#accordion">
                                             <div class="card-body">
-                                              A user has to buy X of items from a category in order to be elligible for the discount. You can list multiple categories, but cannot mix and match between categories.
+                                              A user has to buy X of items from a category in order to be eligible for the discount. You can list multiple categories, but cannot mix and match between categories.
                                               <br><br>
                                               E.g. BOGO on Brava and Tweed. Cart has 3 mix and match Brava, 3 mix and match Tweed. 
                                               <br>
