--- a/utm.html
+++ b/utm.html
@@ -199,6 +199,7 @@
                                             <option value="etsy">Etsy</option>
                                             <option value="facebook">Facebook</option>
                                             <option value="instagram">Instagram</option>
+                                            <option value="jebbit">Jebbit</option>
                                             <option value="pinterest">Pinterest</option>
                                             <option value="libsyn">Podcast</option>
                                             <option value="ravelry">Ravelry</option>
@@ -234,6 +235,7 @@
                                             <option value="fcbkpost">Facebook Post</option>
                                             <option value="instagram">Instagram Ad</option>
                                             <option value="instapost">Instagram Post</option>
+                                            <option value="jebbit">Jebbit Survey</option>
                                             <option value="pinterest">Pinterest Ad</option>
                                             <option value="pinpost">Pinterest Post</option>
                                             <option value="podcast">Podcast</option>
