--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-bell fa-fw"></i>
                                 <!-- Counter - Alerts -->
-                                <span class="badge badge-danger badge-counter">1</span>
+                                <span class="badge badge-danger badge-counter"></span>
                             </a>
                             <!-- Dropdown - Alerts -->
                             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -316,7 +316,7 @@
                                                 <h6 class="m-0"><b>Items / Categories</b></h6>
                                             </div>
                                             <div class="input">
-                                                <input class="form-control" id="item-input" type="text" value="" placeholder="300358: Aluminum Needles, 300319: Wood Needles, etc. or N/A " required>
+                                                <input class="form-control" id="item-input" type="text" value="" required>
                                             </div>
                                         </div>
 
